crates/confly/tests/snapshots/provider_cli_test__test_subscription_clash_boslife_cmd_0.snap
---
source: crates/confly/tests/provider_cli_test.rs
expression: result
---
[34mRaw[39m
http://127.0.0.1:<PORT>/subscription?token=bppleman&flag=Clash
[34mProfile[39m
<SERVER>profile/clash/boslife?interval=43200&strict=true&sub_url=<ENC_SUB_URL>
[34mRawProfile[39m
<SERVER>raw-profile/clash/boslife?interval=43200&strict=true&sub_url=<ENC_SUB_URL>
[34mSubLogs[39m
<SERVER>sub-logs?secret=drjgraDxPZBAXWrlU4a9KL3SGbigje0akusEDqw1tReCupBBX-o6PGTKRGGrhztH
[34mRuleProvider[39m
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=DIRECT&policy[is_subscription]=true&sub_url=<ENC_SUB_URL>
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=BosLife&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=BosLife&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=BosLife&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=DIRECT&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=DIRECT&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
<SERVER>rule-provider/clash/boslife?interval=43200&policy[name]=DIRECT&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
