crates/confly/tests/snapshots/provider_cli_test__test_subscription_surge_boslife_cmd_2.snap
---
source: crates/confly/tests/provider_cli_test.rs
expression: result
---
[34m提供商原始订阅[39m
http://127.0.0.1:<PORT>/subscription?token=bppleman&flag=Surge
[34m转换器订阅[39m
<SERVER>profile/surge/boslife?interval=86400&strict=false&sub_url=<ENC_SUB_URL>
[34m转发原始订阅[39m
<SERVER>raw-profile/surge/boslife?interval=86400&strict=false&sub_url=<ENC_SUB_URL>
[34m订阅日志记录[39m
<SERVER>sub-logs?secret=KbchdpzmTkPVcTOwdNg51THtHyhRCvtFf99LWQSE6ULTZ1Y6DoVx2ClrEx8YLo35
[34m规则集: [Subscription][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=DIRECT&policy[is_subscription]=true&sub_url=<ENC_SUB_URL>
[34m规则集: [BosLife][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=BosLife&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
[34m规则集: [BosLife: no-resolve][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=BosLife&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
[34m规则集: [BosLife: force-remote-dns][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=BosLife&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
[34m规则集: [DIRECT][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=DIRECT&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
[34m规则集: [DIRECT: no-resolve][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=DIRECT&policy[option]=no-resolve&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
[34m规则集: [DIRECT: force-remote-dns][39m
<SERVER>rule-provider/surge/boslife?interval=86400&policy[name]=DIRECT&policy[option]=force-remote-dns&policy[is_subscription]=false&sub_url=<ENC_SUB_URL>
